Fill calculator with dummy text

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="calculator">
-        <div class="add"></div>
-        <div class="subtract"></div>
-        <div class="multiply"></div>
-        <div class="divide"></div>
-        <div class="equal"></div>
+    <div id="calculator"> 123456789
+        <div class="add">+</div>
+        <div class="subtract">-</div>
+        <div class="multiply">*</div>
+        <div class="divide">/</div>
+        <div class="equal">=</div>
     </div>
 </body>
 </html>
