Add clear button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="calculator"> 123456789
+        <div class="clear"></div>
         <div class="add">+</div>
         <div class="subtract">-</div>
         <div class="multiply">*</div>
