Replace divs with buttons

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <div id="calculator"> 123456789
-        <div class="clear"></div>
-        <div class="add">+</div>
-        <div class="subtract">-</div>
-        <div class="multiply">*</div>
-        <div class="divide">/</div>
-        <div class="equal">=</div>
+        <button class="clear">Clear</button>
+        <button class="add">+</button>
+        <button class="subtract">-</button>
+        <button class="multiply">*</button>
+        <button class="divide">/</button>
+        <button class="equals">=</button>
     </div>
 </body>
 </html>
