--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="calculator"> 123456789
+        <div id="display"></div>
         <button class="clear">Clear</button>
         <button class="add">+</button>
         <button class="subtract">-</button>
