--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     <div id="calculator"> 123456789
         <div id="display"></div>
         <button class="clear">Clear</button>
+        <button class="seven digit"></button>
+        <button class="eight digit"></button>
+        <button class="nine digit"></button>
         <button class="add">+</button>
+        <button class="four digit"></button>
+        <button class="five digit"></button>
+        <button class="six digit"></button>
         <button class="subtract">-</button>
+        <button class="one digit"></button>
+        <button class="two digit"></button>
+        <button class="three digit"></button>
         <button class="multiply">*</button>
         <button class="divide">/</button>
+        <button class="zero digit"></button>
         <button class="equals">=</button>
     </div>
 </body>
