--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="calculator"> 123456789
-        <div id="display"></div>
+    <div id="calculator">
+        <div id="display">1234567890</div>
         <button class="clear">Clear</button>
-        <button class="seven digit"></button>
-        <button class="eight digit"></button>
-        <button class="nine digit"></button>
+        <button class="seven digit">7</button>
+        <button class="eight digit">8</button>
+        <button class="nine digit">9</button>
         <button class="add">+</button>
-        <button class="four digit"></button>
-        <button class="five digit"></button>
-        <button class="six digit"></button>
+        <button class="four digit">4</button>
+        <button class="five digit">5</button>
+        <button class="six digit">6</button>
         <button class="subtract">-</button>
-        <button class="one digit"></button>
-        <button class="two digit"></button>
-        <button class="three digit"></button>
+        <button class="one digit">1</button>
+        <button class="two digit">2</button>
+        <button class="three digit">3</button>
         <button class="multiply">*</button>
         <button class="divide">/</button>
-        <button class="zero digit"></button>
+        <button class="zero digit">0</button>
         <button class="equals">=</button>
     </div>
 </body>
