--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display">1234567890</div>
+        <div id="display"></div>
         <button class="clear">Clear</button>
         <button class="seven digit">7</button>
         <button class="eight digit">8</button>
