--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <button class="seven digit">7</button>
         <button class="eight digit">8</button>
         <button class="nine digit">9</button>
-        <button class="add">+</button>
+        <button class="add digit">+</button>
         <button class="four digit">4</button>
         <button class="five digit">5</button>
         <button class="six digit">6</button>
-        <button class="subtract">-</button>
+        <button class="subtract digit">-</button>
         <button class="one digit">1</button>
         <button class="two digit">2</button>
         <button class="three digit">3</button>
-        <button class="multiply">*</button>
-        <button class="divide">/</button>
+        <button class="multiply digit">*</button>
+        <button class="divide digit">/</button>
         <button class="zero digit">0</button>
         <button class="equals">=</button>
     </div>
