--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <div id="calculator">
         <div id="display"></div>
         <button class="clear">Clear</button>
-        <button class="seven digit">7</button>
-        <button class="eight digit">8</button>
-        <button class="nine digit">9</button>
-        <button class="add digit">+</button>
-        <button class="four digit">4</button>
-        <button class="five digit">5</button>
-        <button class="six digit">6</button>
-        <button class="subtract digit">-</button>
-        <button class="one digit">1</button>
-        <button class="two digit">2</button>
-        <button class="three digit">3</button>
-        <button class="multiply digit">*</button>
-        <button class="divide digit">/</button>
-        <button class="zero digit">0</button>
+        <button class="seven show">7</button>
+        <button class="eight show">8</button>
+        <button class="nine show">9</button>
+        <button class="add show">+</button>
+        <button class="four show">4</button>
+        <button class="five show">5</button>
+        <button class="six show">6</button>
+        <button class="subtract show">-</button>
+        <button class="one show">1</button>
+        <button class="two show">2</button>
+        <button class="three show">3</button>
+        <button class="multiply show">*</button>
+        <button class="divide show">/</button>
+        <button class="zero show">0</button>
         <button class="equals">=</button>
     </div>
 </body>
