Wrap all buttons except clear in a div

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div id="calculator">
         <div id="display"></div>
+        <div class="button-container">
         <button class="clear">Clear</button>
         <button class="seven show">7</button>
         <button class="eight show">8</button>
@@ -27,6 +28,7 @@
         <button class="divide operator">/</button>
         <button class="zero show">0</button>
         <button class="equals">=</button>
+    </div>
     </div>
 </body>
 </html>
