--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="calculator">
         <div id="display"></div>
-        <div class="button-container">
         <button class="clear">Clear</button>
+        <div class="button-container"></div>
         <button class="seven show">7</button>
         <button class="eight show">8</button>
         <button class="nine show">9</button>
