Remove display message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="calculator">
-        <div id="display"> <div class="display-message"></div></div>
+        <div id="display"></div>
         <button class="clear">Clear</button>
             <div class="button-container">
              <button class="seven show">7</button>
