Add display message on the correct spot

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
             <button class="equals">=</button>
         </div>
     </div>
+    <div class="display-message"></div>
 </body>
 </html>
