--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div id="display"></div>
         <button class="clear">Clear</button>
             <div class="button-container">
-             <button class="seven show">7</button>
+             <button class="seven show left-margin">7</button>
             <button class="eight show">8</button>
             <button class="nine show right-margin">9</button>
-            <button class="four show ">4</button>
+            <button class="four show left-margin">4</button>
             <button class="five show">5</button>
             <button class="six show right-margin">6</button>
-            <button class="one show">1</button>
+            <button class="one show left-margin">1</button>
             <button class="two show">2</button>
             <button class="three show right-margin">3</button>
-            <button class="add operator">+</button>
+            <button class="add operator left-margin">+</button>
             <button class="zero show">0</button>
             <button class="multiply operator right-margin">*</button>
-            <button class="divide operator">/</button>
+            <button class="divide operator left-margin">/</button>
             <button class="subtract operator">-</button>
             <button class="equals right-margin">=</button>
         </div>
