Add button that adds floating point numbers

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="calculator">
         <div id="display"></div>
         <button class="clear">Clear</button>
+        <button class="floating-point">.</button>
             <div class="button-container">
              <button class="seven show left-margin">7</button>
             <button class="eight show">8</button>
