Wrap the two first buttons inside a div

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <div id="calculator">
         <div id="display"></div>
+    <div class="settings-container">
         <button class="clear">Clear</button>
         <button class="floating-point">.</button>
+    </div>
             <div class="button-container">
              <button class="seven show left-margin">7</button>
             <button class="eight show">8</button>
